# Design-Patterns

./: README.md
abstract factory/: readme.md
abstract factory/UML/: diagram.puml
abstract-factory/: AlienSpaceship.cpp  readme.md  spaceship.cpp
abstract-factory/UML/: diagram.puml
builder/: CMakeLists.txt  readme.md
builder/UML/: diagram.puml
builder/inc/: car.h  carBuilder.h  carSchematic.h  cheapFordBuilder.h  engineer.h  expensiveFordBuilder.h
builder/src/: car.cpp  carSchematic.cpp  cheapFordBuilder.cpp  engineer.cpp  expensiveFordBuilder.cpp  main.cpp
factory/: CMakeLists.txt  readme.md
factory/UML/: diagram.puml
factory/inc/: alienFriendlySpaceship.h  alienHostileSpaceship.h  alienSpaceshipFactory.h  spaceship.h  spaceshipFactory.h
factory/src/: alienFriendlySpaceship.cpp  alienHostileSpaceship.cpp  alienSpaceshipFactory  alienSpaceshipFactory.cpp  alienSpaceshipFactory.h  main.cpp  spaceship.cpp  spaceship.h  spaceshipFactory.cpp  spaceshipFactory.h
prototype/: CMakeLists.txt  readme.md
prototype/UML/: diagram.puml
prototype/inc/: employee.h  employeeDeveloper.h  employeeEngineer.h  employeeFactory.h
prototype/src/: employeeDeveloper.cpp  employeeEngineer.cpp  employeeFactory.cpp  main.cpp
